# libqb

./: .gitattributes  .gitignore  .tito.spec.tmpl  .travis.yml  INSTALL  LICENSE  Lindent  Makefile.am  README  README.markdown  README_CH.md  TESTFILE  TODO  autogen.sh  check  check_all  coding_style.txt  configure.ac  index.html  libqb.spec.in  params.json  quarterback.spec.in  release.mk
.tito/: custom.py  tito.props
0.14.4/: 0.14.3_to_0.14.4.html  Changelog.txt
0.14.4/coverity/: index.html  index.xml  index1.html  index1.xml  index101.html  index101.xml  index151.html  index151.xml  index201.html  index201.xml  index51.html  index51.xml  summary.html  summary.xml
0.14.4/doxygen/: annotated.html  classes.html  deprecated.html  dir_99176029e6245da7be482686d42cbcde.html  dir_99176029e6245da7be482686d42cbcde_dep.map  dir_99176029e6245da7be482686d42cbcde_dep.md5  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23_dep.map  dir_d44c64559bbebec7f509842c48db8b23_dep.md5  examples.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_0x66.html  globals_0x68.html  globals_0x6c.html  globals_0x70.html  globals_0x71.html  globals_0x74.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  globals_vars.html  graph_legend.html  index.html  ipcclient_8c-example.html  ipcserver_8c-example.html  mainpage_8h.html  pages.html  qb_array_overview.html  qb_atomic_overview.html  qb_hdb_overview.html  qb_ipc_overview.html  qb_list_overview.html  qb_log_overview.html  qb_loop_overview.html  (+55 more)
0.16.0/: 0.14.4_to_0.16.0.html  Changelog.txt
0.16.0/doxygen/: annotated.html  classes.html  deprecated.html  dir_99176029e6245da7be482686d42cbcde.html  dir_99176029e6245da7be482686d42cbcde_dep.md5  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23_dep.map  dir_d44c64559bbebec7f509842c48db8b23_dep.md5  examples.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_0x66.html  globals_0x68.html  globals_0x6c.html  globals_0x70.html  globals_0x71.html  globals_0x74.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  globals_vars.html  graph_legend.html  index.html  ipcclient_8c-example.html  ipcserver_8c-example.html  mainpage_8h.html  pages.html  qb_array_overview.html  qb_atomic_overview.html  (+57 more)
0.17.0/: 0.16.0_to_0.17.0.html  Changelog.txt
0.17.1/: 0.17.0_to_0.17.1.html  Changelog.txt
0.17.2/: 0.17.1_to_0.17.2.html  Changelog.txt
1.0/: 1.0rc4_to_1.0.html  Changelog.txt
1.0.1/: 1.0_to_1.0.1.html  Changelog.txt
1.0.2/: 1.0.1_to_1.0.2.html  Changelog.txt
1.0.4/: 1.0.3_to_1.0.4.html  Changelog.txt
1.0.5/: 1.0.4_to_1.0.5.html  Changelog.txt
1.0rc1/: 0.17.2_to_1.0rc1.html  Changelog.txt
1.0rc2/: 1.0rc1_to_1.0rc2.html  Changelog.txt
1.0rc3/: 1.0rc2_to_1.0rc3.html  Changelog.txt
1.0rc4/: 1.0rc3_to_1.0rc4.html  Changelog.txt
1.9.0/: 1.0.5_to_1.9.0.html  Changelog.txt
1.9.1/: 1.9.0_to_1.9.1.html  Changelog.txt
2.0.0/: 1.9.1_to_2.0.0.html  Changelog.txt
build-aux/: abi-check-templ.xml  api-auto-test.xml  generate-docs  git-version-gen  release.mk  update-copyright.sh
docs/: .gitignore  Makefile.am  common.dox.in  html.dox.in  mainpage.h  man.dox.in
docs/man8/: qb-blackbox.8
doxygen2man/: Doxyfile.example  Makefile.am  cstring.c  cstring.h  doxygen2man.1  doxygen2man.c
examples/: .gitignore  Makefile.am  ipcclient.c  ipcserver.c  mapnotify.c  simplelog.c  tcpclient.c  tcpserver.c
include/: .gitignore  Makefile.am  mingw.h  os_base.h  tlist.h
include/qb/: Makefile.am  qbarray.h  qbatomic.h  qbconfig.h.in  qbdefs.h  qbhash.h  qbhdb.h  qbipc_common.h  qbipcc.h  qbipcs.h  qblist.h  qblog.h  qblogsys.h  qbloop.h  qbmap.h  qbplugin.h  qbplugin_comp.h  qbpoll.h  qbqueue.h  qbrb.h  qbtimer.h  qbtsafe.h  qbutil.h  qbwthread.h
lib/: .gitignore  Makefile.am  array.c  atomic_gcc.c  atomic_int.h  atomic_lock.c  hash.c  hashtable.c  hdb.c  ipc_eventfd.c  ipc_int.h  ipc_posix_mq.c  ipc_setup.c  ipc_shm.c  ipc_socket.c  ipc_sysv_mq.c  ipc_us.c  ipcc.c  ipcs.c  libqb.pc.in  log.c  log_blackbox.c  log_dcs.c  log_file.c  log_format.c  log_int.h  log_syslog.c  log_thread.c  logsys.c  loop.c  loop_int.h  loop_job.c  loop_poll.c  loop_poll_epoll.c  loop_poll_int.h  loop_poll_kqueue.c  loop_poll_poll.c  loop_timer.c  loop_timerlist.c  map.c  (+27 more)
lib/hash/: Makefile.am  libqbhash.versions
lib/ipc/: Makefile.am  ipcc.c  ipcs.c  libqbipcc.versions  libqbipcs.versions
lib/logsys/: Makefile.am  libqblogsys.versions
lib/plugin/: Makefile.am  plugin_loader.c  test.c
lib/poll/: Makefile.am  libqbpoll.versions
lib/timer/: Makefile.am  libqbtimer.versions
lib/tsafe/: Makefile.am  libqbtsafe.versions  tsafe.c
lib/wthread/: Makefile.am  libqbwthread.versions  wthread.c
m4/: ax_compat.m4  ax_prog_date.m4
man/: Doxyfile  Makefile.am
pkgconfig/: Makefile.am  libtemplate.pc.in
tests/: .gitignore  Makefile.am  _failure_injection.c  _failure_injection.h  _libstat_wrapper.c  _syslog_override.c  _syslog_override.h  bench-log.c  blackbox-segfault.sh  blackbox.c  bmc.c  bmcpt.c  bms.c  check_array.c  check_common.h  check_hash.c  check_ipc.c  check_list.c  check_log.c  check_loop.c  check_map.c  check_plugin.c  check_rb.c  check_tlist.c  check_util.c  crash_test_dummy.c  file_change_bytes.c  format_compare_speed.c  ipc_sock.test  libstat_wrapper.c  libtest_a.c  libtest_b.c  loop.c  make-log-test  print_ver.c  rbreader.c  rbwriter.c  resources.test  run-coverity  simple-log.c  (+4 more)
tests/functional/: GNUmakefile  Makefile.am  log.am  log_callsite_bench_gen.py  log_client.c  log_interlib.c  log_interlib_client.c  log_test_client.err  log_test_client.sh  log_test_interlib_client.err  log_test_interlib_client.sh  log_test_mock.sh  syslog-stdout.py
tests/functional/log_blackbox_fork/: Makefile.am  log_blackbox_fork.c  runtest.sh
tests/functional/log_external/: Makefile.am
tests/functional/log_internal/: Makefile.am
tools/: .gitignore  Makefile.am  qb_blackbox.c
(+1651 files in other folders)
